<resources>
    <string name="app_name">Crypto</string>
    <string name="empty_state">Empty state</string>
    <string name="values_state">Values state</string>
    <string name="home">Home</string>
    <string name="bitcoin">bitcoin</string>
    <string name="ethereum">Ethereum</string>
    <string name="deposit">Deposit</string>
    <string name="your_crypto_holdings">Your Crypto Holdings</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="view_all">View all</string>
    <string name="crypto_prices">Crypto Prices</string>
    <string name="buy">Buy</string>
</resources>