<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="20dp"
    tools:context=".fragments.EmptyOrValuesStateFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/idNSVContentFound"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/idMCVCryptoAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:strokeColor="@color/light_divider"
                app:strokeWidth="0.5dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/idIVBitcoin"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_marginStart="10dp"
                        android:contentDescription="@string/bitcoin"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/idIVEthereum"
                        android:layout_width="34dp"
                        android:layout_height="34dp"
                        android:layout_marginStart="-10dp"
                        android:contentDescription="@string/ethereum"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@id/idIVBitcoin"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/idMTVCryptoAccountTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        app:layout_constraintStart_toEndOf="@id/idIVEthereum"
                        app:layout_constraintTop_toTopOf="@id/idIVBitcoin" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/idMTVCryptoAccountSubtitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="2dp"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:textColor="@color/light_black"
                        android:textSize="10sp"
                        app:layout_constraintStart_toEndOf="@id/idIVEthereum"
                        app:layout_constraintTop_toBottomOf="@id/idMTVCryptoAccountTitle"
                        tools:ignore="SmallSp" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/idMBTNDepositCrypto"
                        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/deposit"
                        android:textAllCaps="false"
                        android:textSize="12sp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/idMTVCryptoAccountBalance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="2dp"
                        android:fontFamily="sans-serif-condensed-medium"
                        android:textColor="@color/black"
                        android:visibility="gone"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/idMaterialDivider1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:dividerColor="@color/light_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/idMCVCryptoAccount" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/idCLYourCryptoHolding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="@id/idMCVCryptoAccount"
                app:layout_constraintStart_toStartOf="@id/idMCVCryptoAccount"
                app:layout_constraintTop_toBottomOf="@id/idMaterialDivider1">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/idMTVYourCryptoHoldingTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/your_crypto_holdings"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/idMTVYourCryptoHoldingTitle"
                    app:strokeColor="@color/light_divider"
                    app:strokeWidth="0.5dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/idRVCryptoHolding"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp" />

                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/idMaterialDivider2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:dividerColor="@color/light_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/idCLYourCryptoHolding" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/idCLRecentTransaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="@id/idMCVCryptoAccount"
                app:layout_constraintStart_toStartOf="@id/idMCVCryptoAccount"
                app:layout_constraintTop_toBottomOf="@id/idMaterialDivider2">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/idMTVRecentTransactionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/recent_transactions"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/idMTVRecentTransactionViewAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/view_all"
                    android:textColor="@color/blue"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/idMTVRecentTransactionTitle"
                    app:strokeColor="@color/light_divider"
                    app:strokeWidth="0.5dp">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/idRVRecentTransaction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp" />

                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/idMaterialDivider3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:dividerColor="@color/light_divider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/idCLRecentTransaction" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/idCLCryptoPrices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="@id/idMCVCryptoAccount"
                app:layout_constraintStart_toStartOf="@id/idMCVCryptoAccount"
                app:layout_constraintTop_toBottomOf="@id/idMaterialDivider3">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/idMTVCryptoPrices"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/crypto_prices"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/idRVCryptoPrices"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    app:layout_constraintTop_toBottomOf="@id/idMTVCryptoPrices" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/idPBLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/blue"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>